--- a/src/components/NestedBoxes/styles.scss
+++ b/src/components/NestedBoxes/styles.scss
@@ -1,18 +1,27 @@
 @import '../../styles/_variables.scss';
 
+// mess of hyper-specific styles, mainly for 3 different title layouts
 .prog-95 {
+
+  .content {
+    margin-top: 3*$buffer;
+  }
+
   .title {
-    &.xl {
+    &.xl, &.stacked {
       display: none;
     }
-    transform: rotate(-90deg);
-    position: absolute;
-    left: calc(-120px + 25%);
-    top: 154px;
-    font-size: 18px;
+    &.vertical {
 
+      transform: rotate(-90deg);
+      position: absolute;
+      left: calc(-120px + 25%);
+      top: 170px;
+    }
+
+    font-size: 20px;
     font-weight: 300;
-    white-space: pre;
+    // white-space: pre;
   }
   
   .nested-boxes {
@@ -20,7 +29,7 @@
       display: none;
     }
     svg {
-      padding-left: 15%;
+      padding-left: 20%;
       display: block;
       margin: auto;
       max-height: 300px;
@@ -28,7 +37,7 @@
     
     line {
       stroke-width: .6;
-      stroke-dasharray: 1 1.2;
+      stroke-dasharray: .8 1;
     }
     
     text {
@@ -39,24 +48,52 @@
   }
   
   @media screen and (max-width: 376px) {
-    .title {
+    .title.vertical {
       font-size: 16px;
-      top: 115px;
+      top: 160px;
+      left: -20px;
     }
     svg {
-      min-height: 180px;
+      min-height: 210px;
+    }
+  }
+  @media screen and (min-width: 376px) and (max-width: 768px) {
+    .content {
+      display: flex;
+      justify-content: center;
+    }
+    svg {
+      min-height: 250px;
+    }
+    .title {
+      &.xl, &.vertical {
+        display: none;
+      }
+      &.stacked {
+        display: block;
+        margin: auto 3% 35px 0;
+        text-align: right;
+        font-size: 22px;
+        line-height: 1.3;
+        // max-width: 100px; 
+      }
     }
   }
   @media screen and (min-width: 1200px) {
+    .content {
+      display: block;
+    }
     .title {
       display: none;
       &.xl {
         display: block;
       }
-      transform: none;
-      position: static;
-      font-size: 24px;
+      // transform: none;
+      // position: static;
+      font-size: 31px;
       text-align: center;
+      padding-top: 2*$buffer;
+      padding-bottom: 2*$buffer;
     }
     .nested-boxes {
       display: none;
@@ -64,7 +101,8 @@
         display: block;
       }
       svg {
-        padding-left: 30px;
+        margin-bottom: 3*$buffer;
+        padding-left: 3*$buffer;
         max-height: 210px;
       }
     }
