top padding tweaks

--- a/src/components/NestedBoxes/styles.scss
+++ b/src/components/NestedBoxes/styles.scss
@@ -92,7 +92,7 @@
       // position: static;
       font-size: 31px;
       text-align: center;
-      padding-top: 2*$buffer;
+      // padding-top: 2*$buffer;
       padding-bottom: 2*$buffer;
     }
     .nested-boxes {
