--- a/src/containers/Dashboard/styles.scss
+++ b/src/containers/Dashboard/styles.scss
@@ -205,6 +205,7 @@ $nav-height: 64px;
         }
       }
       .input-group {
+        max-width: 250px;
         margin-right: 2*$buffer;
         select {
           font-size: 16px;
