pop groups: style gendered tokens

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,9 +12,6 @@ $accent-blue-x-dark: #1a2c39;
 $subtle-wheat: #F9F8EF;
 // $accent-blue-dark: #17325B;
 
-$women: $who-brown;
-$men: $accent-blue-dark;
-
 $scorpion: #595959; // slatey
 $froly: #F8766D; // salmonish
 $olive: #A3A500;
@@ -53,6 +50,9 @@ $storm-gray: #6D7383DD;
 $opal: #9FBCC0DD;
 $botticelli: #C5DDE2DD;
 $copper: #B2793DDD;
+
+$women: $cutty-sark;
+$men: $pirate-gold;
 
 // $link-color: $deep-sea-green;
 $link-color: #956837;
