pop groups table: only hide row on header click

--- a/src/components/DemographicsTable/styles.scss
+++ b/src/components/DemographicsTable/styles.scss
@@ -29,7 +29,9 @@
       }
       
       // max-width: $max-width;
-      
+      th[scope="row"] {
+        cursor: pointer;
+      }
       td {
         white-space: nowrap;
       }
