split SELF from FORECAST fix NESTED key troubles

--- a/src/containers/Dashboard/styles.scss
+++ b/src/containers/Dashboard/styles.scss
@@ -424,6 +424,7 @@ $nav-height: 64px;
         //   width: 100% !important; 
         // }
     }
+    .chart-container.SELF,
     .chart-container.FORECAST {
       margin-top: 0;
       margin-bottom: 2*$buffer;
